--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="part right-side">
         <div class="about">
             <div class="title about-title">О себе</div>
-            <div class="text about-text">Работа в качестве технического директора. Руководство компанией. Навыки веб-разработки (back-end ; front-end) .</div>
+            <div class="text about-text">Работа в качестве технического директора. Руководство компанией. Навыки веб-разработки (back-end &amp; front-end) .</div>
         </div>
         <div class="experience">
             <div class="title">Опыт</div>
